section_14_operator_overloading/operator_overloading_as_member_functions/compiling_error.txt
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp: In function 'int main()':
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:10:3: error: 'Mystring' was not declared in this scope
   Mystring larry {"Larry"};
   ^~~~~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:10:3: note: suggested alternative: 'isprint'
   Mystring larry {"Larry"};
   ^~~~~~~~
   isprint
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:11:11: error: expected ';' before 'moe'
   Mystring moe {"Moe"};
           ^~~~
           ;
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:13:11: error: expected ';' before 'stooge'
   Mystring stooge = larry;
           ^~~~~~~
           ;
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:14:3: error: 'larry' was not declared in this scope
   larry.display();
   ^~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:15:3: error: 'moe' was not declared in this scope
   moe.display();
   ^~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:18:21: error: 'stooge' was not declared in this scope
   cout << (larry == stooge) << endl;
                     ^~~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:18:21: note: suggested alternative: 'stdout'
   cout << (larry == stooge) << endl;
                     ^~~~~~
                     stdout
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:21:11: error: expected ';' before 'larry2'
   Mystring larry2 = -larry;
           ^~~~~~~
           ;
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:22:3: error: 'larry2' was not declared in this scope
   larry2.display();
   ^~~~~~
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:24:11: error: expected ';' before 'stooges'
   Mystring stooges = larry + "Moe";
           ^~~~~~~~
           ;
C:\Users\D'angelo\Projects\udemy\beginner_c++\c++_operator_overloading_as_member_functions\main.cpp:27:11: error: expected ';' before 'two_stooges'
   Mystring two_stooges = moe + " " + "Larry";
           ^~~~~~~~~~~~
           ;
